@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
}

class ListCommand {
    - LIST_PATTERN: Pattern
    - input: String
    + ListCommand(input: String)
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
}

interface Validator <<interface>> {
    + validate(items: ItemList, categories: CategoryList): void
}

class ListCommandValidator {
    - LIST_PATTERN: Pattern
    - input: String
    + ListCommandValidator(input: String)
    + validate(items: ItemList, categories: CategoryList): void
}

class ItemList {
    + isEmpty(): boolean
    + size(): int
    + getItem(index: int): Item
}

class CategoryList {
    + containsCategory(name: String): boolean
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. ListCommand
Validator <|.. ListCommandValidator

ListCommand ..> ListCommandValidator : <<creates>>
ListCommand ..> ItemList : reads >
ListCommand ..> CategoryList : reads >
ListCommand ..> Ui : <<uses>>

@enduml